--- a/data base/package.json
+++ b/data base/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "db",
+  "name": "data-base",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "json-server --watch ./db/db.json --port 3000"
+
   },
   "keywords": [],
   "author": "",
